# Fraude_detection

./: .env.example  .gitignore  CHECKLIST_CONFORMITE.md  Dockerfile  PRESENTATION_ENTREPRISE.md  RAPPORT_FINAL.md  README.md  docker-compose.yml  pyproject.toml  requirements-optional.txt  requirements.txt  streamlit_app.py
api/: main.py
config/: settings.yaml
dashboard/: app.py  react_widgets.py
dashboard/components/fraud_widgets/: package-lock.json  package.json  vite.config.js
data/: README.md
data/processed/: customer_segments.csv
mlops/: architecture.md  model_card_clustering.md  model_card_fraud.md
models/: customer_clustering.joblib  fraud_pipeline.joblib
notebooks/: 01_eda_fraude.ipynb  02_modelisation_fraude.ipynb  03_eda_segmentation.ipynb  04_clustering_clients.ipynb  05_mlops_synthese.ipynb  README.md
reports/: README.md  clustering_model_comparison.csv  clustering_model_selection.json  customer_clustering_metrics.json  customer_k_scores.csv  fraud_false_negatives_sample.csv  fraud_false_positives_sample.csv  fraud_feature_importance.csv  fraud_metrics.json  fraud_model_comparison.csv  fraud_model_selection.json  fraud_shap_importance.csv  fraud_shap_note.json  rapport_final.html
scripts/: check_environment.py  compare_clustering_models.py  compare_fraud_models.py  generate_html_report.py  interpret_fraud_model.py  profile_data.py  score_fraud_csv.py  show_results.py  train_customer_clustering.py  train_fraud.py
src/ml_project/: __init__.py  config.py
tests/: test_customer_labels.py  test_features.py  test_selection.py
(+15 files in other folders)
